force-app/main/default/objects/Quote/fields/BP_Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>BP_Invoice_Total__c</fullName>
    <label>BP Invoice Total</label>
    <summarizedField>QuoteLineItem.BP_Invoice_Total__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>