force-app/main/default/objects/Quote/fields/Expense_Outbound_Freight__c.field-meta.xml
<CustomField>
    <fullName>Expense_Outbound_Freight__c</fullName>
    <label>Expense Outbound/Freight</label>
    <summarizedField>QuoteLineItem.Expense_Outbound_Freight__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>