force-app/main/default/objects/Quote/fields/Expenses_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Inbound__c</fullName>
    <label>Expenses Inbound</label>
    <summarizedField>QuoteLineItem.Expenses_Inbound__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>