force-app/main/default/objects/Quote/fields/Fee_less_INS__c.field-meta.xml
<CustomField>
    <fullName>Fee_less_INS__c</fullName>
    <label>Fee less INS</label>
    <summarizedField>QuoteLineItem.Fee_less_INS__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>