force-app/main/default/objects/Quote/fields/Initial_Quote_Supplier_Currency__c.field-meta.xml
<CustomField>
    <fullName>Initial_Quote_Supplier_Currency__c</fullName>
    <label>Initial Quote - Supplier Currency</label>
    <summarizedField>QuoteLineItem.Initial_Quote_Supplier_Currency__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>