force-app/main/default/objects/Quote/fields/Main_Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Supplier Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>