force-app/main/default/objects/Quote/fields/Main_Yacht_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Yacht_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Yacht Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Main Yacht Contact)</relationshipLabel>
    <relationshipName>QuotesYachts</relationshipName>
    <type>Lookup</type>
</CustomField>