force-app/main/default/objects/Quote/fields/Order_Value_Converted__c.field-meta.xml
<CustomField>
    <fullName>Order_Value_Converted__c</fullName>
    <label>Order Value - Converted</label>
    <summarizedField>QuoteLineItem.Initial_Quote_Converted__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>