force-app/main/default/objects/Quote/fields/Order_Value_Supplier_Currency__c.field-meta.xml
<CustomField>
    <fullName>Order_Value_Supplier_Currency__c</fullName>
    <label>Order Value - Supplier Currency</label>
    <summarizedField>QuoteLineItem.Order_Value__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>