force-app/main/default/objects/Quote/fields/Quote_Emailed__c.field-meta.xml
<CustomField>
    <fullName>Quote_Emailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Emailed?</label>
    <type>Checkbox</type>
</CustomField>