force-app/main/default/objects/Quote/fields/Quote_Emailed_Data__c.field-meta.xml
<CustomField>
    <fullName>Quote_Emailed_Data__c</fullName>
    <label>Quote Emailed Data</label>
    <type>Date</type>
</CustomField>