force-app/main/default/objects/Quote/fields/Quote_Emailed_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Emailed_Date__c</fullName>
    <label>Quote Emailed Date</label>
    <type>Date</type>
</CustomField>