force-app/main/default/objects/Quote/fields/RFQ_Emailed__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Emailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFQ Emailed?</label>
    <type>Checkbox</type>
</CustomField>