force-app/main/default/objects/Quote/fields/RFQ_Emailed_Date__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Emailed_Date__c</fullName>
    <label>RFQ Emailed Date</label>
    <type>Date</type>
</CustomField>