force-app/main/default/objects/Quote/fields/SUP_Days_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>SUP_Days_for_Payment__c</fullName>
    <formula>Supplier_Invoice_Payment_Date__c - Supplier_Date_Invoice_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUP Days for Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>