force-app/main/default/objects/Quote/fields/Supplier_Date_Invoice_Received__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Date_Invoice_Received__c</fullName>
    <label>Supplier Date Invoice Received</label>
    <type>Date</type>
</CustomField>