force-app/main/default/objects/Quote/fields/Supplier_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Number__c</fullName>
    <label>Supplier Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>