force-app/main/default/objects/Quote/fields/Supplier_Invoice_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Payment_Date__c</fullName>
    <label>Supplier Invoice Payment Date</label>
    <type>Date</type>
</CustomField>