force-app/main/default/objects/Quote/fields/Supplier_Provided_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Provided_Invoice__c</fullName>
    <label>Supplier Provided Invoice?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>