force-app/main/default/objects/Quote/fields/Yacht_Preferred_Currency__c.field-meta.xml
<CustomField>
    <fullName>Yacht_Preferred_Currency__c</fullName>
    <label>Yacht Preferred Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>