force-app/main/default/objects/Quote/recordTypes/Procurement_Supplier_Quote.recordType-meta.xml
<RecordType>
    <fullName>Procurement_Supplier_Quote</fullName>
    <active>true</active>
    <label>Procurement Supplier Quote</label>
</RecordType>